<resources>
    <string name="app_name">Lab 6</string>
    <string name="email_address">Enter your email address</string>
    <string name="type_email">Type email here</string>
    <string name="password">Type your password</string>
    <string name="login">Login</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name</string>
    <string name="enter_name">Enter your name</string>
    <string name="your_email">Your email</string>
    <string name="enter_email">Enter your email</string>
    <string name="picture">Your picture</string>
    <string name="take_picture">Click the button above to take a picture</string>
    <string name="send_button">Send</string>
    <string name="receive_button">Receive</string>
    <string name="chat_button">Go to chat</string>
    <string name="weatherForecast_button">Go to Weather Forecast</string>
    <string name="type_hint">Type here</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="uv_rating">UV Rating</string>
    <string name="message_here">Message Here</string>
    <string name="view_id">ID=</string>
    <string name="one_send_message">Is a Send Message</string>
    <string name="hide">HIDE</string>

</resources>