<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    tools:context=".ProfileActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:src="@android:drawable/picture_frame"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:text="@string/chat_button" />

    <Button
        android:id="@+id/weatherForecast_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:text="@string/weatherForecast_button" />

</LinearLayout>