<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstLevel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/type_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/type_email"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/type_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:nextFocusDown="@id/item1"
        android:nextFocusUp="@id/item2"
        android:nextFocusRight="@id/item3"
        android:nextFocusLeft="@id/item4"
        android:textSize="24sp" />


</LinearLayout>